--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -3,198 +3,88 @@ title: 'API Reference'
 description: 'Interactive API documentation for all PolyRouter endpoints'
 ---
 
-## Welcome to the PolyRouter API
+<Warning>
+  **Open Beta:** PolyRouter is currently in open beta. All features are free during this period. Rate limit: 10 req/sec for all users.
+</Warning>
 
-This interactive documentation allows you to explore and test all API endpoints directly in your browser. Each endpoint includes:
+## Interactive API Testing
+
+This documentation allows you to explore and test all endpoints directly in your browser with:
 
 - **Live Testing** - Try requests with your API key
-- **Code Examples** - Copy-paste ready code in multiple languages
-- **Response Schemas** - Detailed response structure documentation
-- **Parameter Details** - Complete parameter descriptions and validation rules
+- **Code Examples** - Copy-paste ready code
+- **Response Schemas** - Detailed structure documentation
 
-<CardGroup cols={2}>
-  <Card
-    title="Sports V1 API"
-    icon="football"
-    href="#sports-v1-api"
-  >
-    NFL game markets, player props, and awards odds from 5+ platforms
-  </Card>
-  
-  <Card
-    title="Markets V2 API"
-    icon="chart-line"
-    href="#markets-v2-api"
-  >
-    Real-time prediction markets, events, and price history
-  </Card>
-</CardGroup>
+<Info>
+  Click on any endpoint below to access the interactive playground with live testing.
+</Info>
 
 ## Authentication
 
-All API endpoints require authentication using an API key:
+All endpoints require an API key in the `X-API-Key` header:
 
-<CodeGroup>
-
-```bash cURL
-curl -X GET "https://api.polyrouter.io/functions/v1/markets-v2" \
+```bash
+curl "https://api.polyrouter.io/functions/v1/markets-v2" \
   -H "X-API-Key: YOUR_API_KEY"
 ```
 
-```javascript JavaScript
-const response = await fetch(
-  'https://api.polyrouter.io/functions/v1/markets-v2',
-  {
-    headers: {
-      'X-API-Key': 'YOUR_API_KEY'
-    }
-  }
-);
-```
-
-```python Python
-import requests
-
-response = requests.get(
-    'https://api.polyrouter.io/functions/v1/markets-v2',
-    headers={'X-API-Key': 'YOUR_API_KEY'}
-)
-```
-
-</CodeGroup>
-
 <Note>
-  Don't have an API key yet? [Get one here](https://polyrouter.io) - it's free and takes 30 seconds.
+  [Get your free API key](https://polyrouter.io) - takes 30 seconds.
 </Note>
 
-## Base URL
-
-```
-https://api.polyrouter.io/functions/v1
-```
-
-## Interactive Testing
-
-<Info>
-  **Try it now!** Click on any endpoint below to see the interactive playground where you can test requests with your API key and see live responses.
-</Info>
+**Base URL:** `https://api.polyrouter.io/functions/v1`
 
 ## Sports V1 API
 
-Unified sports betting API with standardized game IDs across 5+ platforms:
+Unified sports betting with standardized game IDs across 5+ platforms.
 
 <CardGroup cols={2}>
-  <Card
-    title="League Info"
-    icon="info-circle"
-    href="#get-league-info-v1"
-  >
-    Get team mappings and league metadata
+  <Card title="League Info" icon="info-circle" href="#get-league-info-v1">
+    Team mappings and league metadata
   </Card>
-  
-  <Card
-    title="List Games"
-    icon="list"
-    href="#get-list-games-v1"
-  >
-    Find available games with PolyRouter IDs
+  <Card title="List Games" icon="list" href="#get-list-games-v1">
+    Find available games with IDs
   </Card>
-  
-  <Card
-    title="Game Markets"
-    icon="football"
-    href="#get-games-v1-game-id"
-  >
-    Get betting markets from 5+ platforms
+  <Card title="Game Markets" icon="football" href="#get-games-v1-game-id">
+    Betting markets from 5+ platforms
   </Card>
-  
-  <Card
-    title="Awards"
-    icon="trophy"
-    href="#get-awards-v1"
-  >
-    Get MVP, Super Bowl, and other awards odds
+  <Card title="Awards" icon="trophy" href="#get-awards-v1">
+    MVP, Super Bowl odds
   </Card>
 </CardGroup>
 
 ## Markets V2 API
 
-Real-time prediction market data with direct platform integration:
+Real-time prediction market data with direct platform integration.
 
 <CardGroup cols={2}>
-  <Card
-    title="Markets"
-    icon="chart-line"
-    href="#get-markets-v2"
-  >
-    Browse and filter prediction markets
+  <Card title="Markets" icon="chart-line" href="#get-markets-v2">
+    Browse and filter markets
   </Card>
-  
-  <Card
-    title="Events"
-    icon="calendar"
-    href="#get-events-v2"
-  >
-    Get prediction market events
+  <Card title="Events" icon="calendar" href="#get-events-v2">
+    Prediction market events
   </Card>
-  
-  <Card
-    title="Series"
-    icon="layer-group"
-    href="#get-series-v2"
-  >
-    Access recurring market series
+  <Card title="Series" icon="layer-group" href="#get-series-v2">
+    Recurring market series
   </Card>
-  
-  <Card
-    title="Search"
-    icon="magnifying-glass"
-    href="#get-search-v2"
-  >
-    Search across all platforms
+  <Card title="Search" icon="magnifying-glass" href="#get-search-v2">
+    Multi-platform search
   </Card>
-  
-  <Card
-    title="Price History"
-    icon="chart-area"
-    href="#get-price-history-v2"
-  >
-    Get historical OHLC price data
+  <Card title="Price History" icon="chart-area" href="#get-price-history-v2">
+    Historical OHLC data
+  </Card>
+  <Card title="Platforms" icon="server" href="#get-platforms-v2">
+    Platform information
   </Card>
 </CardGroup>
 
 ## Need Help?
 
 <CardGroup cols={2}>
-  <Card
-    title="Quickstart Guide"
-    icon="rocket"
-    href="/quickstart"
-  >
-    Get started in 5 minutes
+  <Card title="Join Discord" icon="discord" href="https://discord.gg/fyagg92CVM">
+    Community support
   </Card>
-  
-  <Card
-    title="API Overview"
-    icon="book"
-    href="/api-overview"
-  >
-    Learn about API architecture
-  </Card>
-  
-  <Card
-    title="Join Discord"
-    icon="discord"
-    href="https://discord.gg/fyagg92CVM"
-  >
-    Get help from our community
-  </Card>
-  
-  <Card
-    title="Follow on X"
-    icon="x-twitter"
-    href="https://x.com/polyrouter"
-  >
-    Stay updated with latest features
+  <Card title="Follow on X" icon="x-twitter" href="https://x.com/polyrouter">
+    Latest updates
   </Card>
 </CardGroup>
