--- a/ai-tools/cursor.mdx
+++ b/ai-tools/cursor.mdx
@@ -126,7 +126,7 @@ response = requests.get('/api/endpoint',
 
 ```curl cURL
 curl -X GET '/api/endpoint' \
-  -H 'Authorization: Bearer YOUR_API_KEY'
+  -H 'Authorization: Bearer 5fa709a5-0634-44c3-a991-57166d3c376d'
 ```
 </CodeGroup>
 
@@ -266,7 +266,7 @@ Maximum number of results to return. Range: 1-100.
 </ParamField>
 
 <ParamField header="Authorization" type="string" required>
-Bearer token for API authentication. Format: `Bearer YOUR_API_KEY`
+Bearer token for API authentication. Format: `Bearer 5fa709a5-0634-44c3-a991-57166d3c376d`
 </ParamField>
 
 #### Response fields
