--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -5,6 +5,8 @@ description: 'Interactive API documentation for all PolyRouter endpoints'
 
 <Warning>
   **Open Beta:** PolyRouter is currently in open beta. All features are free during this period. Rate limit: 10 req/sec for all users.
+  
+  MESSAGE **@fieldviolence** ON X IF YOU HAVE ANY QUESTIONS OR NEED HELP!
 </Warning>
 
 ## Interactive API Testing
@@ -25,7 +27,7 @@ All endpoints require an API key in the `X-API-Key` header:
 
 ```bash
 curl "https://api.polyrouter.io/functions/v1/markets-v2" \
-  -H "X-API-Key: YOUR_API_KEY"
+  -H "X-API-Key: 5fa709a5-0634-44c3-a991-57166d3c376d"
 ```
 
 <Note>
