Update API documentation: added pagination guide, corrected rate limit descriptions to 10 requests per minute, and updated endpoint URLs for consistency.

--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -4,7 +4,7 @@ description: 'Interactive API documentation for all PolyRouter endpoints'
 ---
 
 <Warning>
-  **Open Beta:** PolyRouter is currently in open beta. All features are free during this period. Rate limit: 10 req/sec for all users.
+  **Open Beta:** PolyRouter is currently in open beta. All features are free during this period. Rate limit: 10 req per minute for all users.
   
   MESSAGE **@fieldviolence** ON X IF YOU HAVE ANY QUESTIONS OR NEED HELP!
 </Warning>
@@ -26,7 +26,7 @@ This documentation allows you to explore and test all endpoints directly in your
 All endpoints require an API key in the `X-API-Key` header:
 
 ```bash
-curl "https://api.polyrouter.io/functions/v1/markets-v2" \
+curl "https://api.polyrouter.io/functions/v1/markets" \
   -H "X-API-Key: 5fa709a5-0634-44c3-a991-57166d3c376d"
 ```
 
