--- a/api-reference/introduction.mdx
+++ b/api-reference/introduction.mdx
@@ -26,15 +26,15 @@ This documentation allows you to explore and test all endpoints directly in your
 All endpoints require an API key in the `X-API-Key` header:
 
 ```bash
-curl "https://lsplqyqiubvctfpfnukr.supabase.co/functions/v1/markets-v2" \
-  -H "X-API-Key: test_1234567890abcdef"
+curl "https://api.polyrouter.io/functions/v1/markets-v2" \
+  -H "X-API-Key: 5fa709a5-0634-44c3-a991-57166d3c376d"
 ```
 
 <Note>
   [Get your free API key](https://polyrouter.io) - takes 30 seconds.
 </Note>
 
-**Base URL:** `https://lsplqyqiubvctfpfnukr.supabase.co/functions/v1`
+**Base URL:** `https://api.polyrouter.io/functions/v1`
 
 ## Sports V1 API
 
