--- a/api-reference/changelog.mdx
+++ b/api-reference/changelog.mdx
@@ -5,6 +5,23 @@ description: "API updates and new features"
 
 # Changelog
 
+## v0.3.1 - Price History & Sports Time Zone Updates
+
+**Released:** November 7, 2025
+
+### Improvements
+
+- **OHLC Price History**: Updated Limitless and Polymarket price history endpoints to use OHLC (Open, High, Low, Close) format for better charting compatibility
+- **Dashboard Graph Fix**: Fixed the usage statistics graph display on the dashboard
+- **PST Time Zone**: All sports endpoints now consistently use PST (Pacific Standard Time) for game dates and start times
+
+### Updated Endpoints
+
+- **`GET /price-history`**: Now returns OHLC format for Limitless and Polymarket data
+- **Sports Endpoints**: `/league-info`, `/list-games`, and `/games/{game_id}` now display times in PST
+
+---
+
 ## v0.3.0 - Profiles, Trades & Platform Improvements
 
 **Released:** November 5, 2025
