fixed criteria resolutio

--- a/api-reference/changelog.mdx
+++ b/api-reference/changelog.mdx
@@ -14,6 +14,7 @@ description: "API updates and new features"
 - **OHLC Price History**: Updated Limitless and Polymarket price history endpoints to use OHLC (Open, High, Low, Close) format for better charting compatibility
 - **Dashboard Graph Fix**: Fixed the usage statistics graph display on the dashboard
 - **PST Time Zone**: All sports endpoints now consistently use PST (Pacific Standard Time) for game dates and start times
+- **Kalshi Resolution Criteria Updated**: Fixed bug where Kalshi markets were not returning resolution criteria and rules
 
 ### Updated Endpoints
 
